shared/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: togglemaster
  labels:
    app.kubernetes.io/part-of: togglemaster
