shared/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service-ingress
  namespace: togglemaster
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 8001

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flag-service-ingress
  namespace: togglemaster
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /flags
            pathType: Prefix
            backend:
              service:
                name: flag-service
                port:
                  number: 8002

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flag-service-health-ingress
  namespace: togglemaster
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /flags-health
            pathType: Exact
            backend:
              service:
                name: flag-service
                port:
                  number: 8002

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: targeting-service-ingress
  namespace: togglemaster
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /targeting(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: targeting-service
                port:
                  number: 8003

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evaluation-service-ingress
  namespace: togglemaster
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /evaluate
            pathType: Prefix
            backend:
              service:
                name: evaluation-service
                port:
                  number: 8004

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-service-ingress
  namespace: togglemaster
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /analytics(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: analytics-service
                port:
                  number: 8005
